Fixed home button in navbar not showing text completely from user profile

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -126,6 +126,10 @@
     padding-top: 0px;
 }
 
+.home-redirect{
+  width: fit-content;
+}
+
 /* ---------------breadcrumbs --------------------------*/
 #breadcrumb, h1{
   position:absolute;
